--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "polslides",
+  "name": "motion-cards",
+  "description": "card slide web app for showing political motions",
   "dependencies": {
     "choo": "^7.1.0",
     "level": "^7.0.1",
@@ -16,7 +17,7 @@
     "start": "npm run prepare && cp index-dev.html public/index.html && npm run web",
     "build": "npm run prepare && npm run browserify",
     "prepare": "rm -rf public && mkdir public",
-    "browserify": "browserify app.js | indexhtmlify --title 'polslides' > public/index.html",
+    "browserify": "browserify app.js | indexhtmlify --title 'Motion Slides' > public/index.html",
     "web": "budo app.js -l -d public"
   }
 }
